- put everything under Lucinda\MVC\STDOUT
- Application:getXML -> Application:getTag(NAME)
- Application:setAttribute/getAttribute -> Application:attributes()
- Application::getRoutes/getRouteInfo/hasRoute -> Application:routes()
- Application::getFormats/getFormatInfo/hasFormat -> Application:formats()
- Request:getParameter/getParameters -> Request:parameters()
- Request:getHeader/getHeaders -> Request:headers()
- Request:setAttribute/getAttribute -> Request:attributes()
- RequestURI:getParameter/getParameters -> RequestURI:parameters()
- Response:setAttribute/getAttribute -> Response:attributes()
- ApplicationException -> XMLException

TODO: create namespaces relative to subfolders