@@ -1,8 +1,2 @@
 <?php
 require_once("src/FrontController.php");
-require_once("src/exceptions/ServletException.php");
-require_once("src/exceptions/XMLException.php");
-require_once("src/exceptions/FileUploadException.php");
-require_once("src/exceptions/PathNotFoundException.php");
-require_once("src/exceptions/FormatNotFoundException.php");
-require_once("src/exceptions/MethodNotAllowedException.php");
