@@ -6,51 +6,54 @@ require_once("Controller.php");
 require_once("Application.php");
 require_once("Request.php");
 require_once("Response.php");
-require_once("response/Wrapper.php");
+require_once("request/PageValidator.php");
+require_once("response/ViewResolver.php");
 require_once("locators/ListenerLocator.php");
 require_once("locators/ControllerLocator.php");
-require_once("locators/WrapperLocator.php");
+require_once("locators/ViewResolverLocator.php");
 require_once("listeners/ApplicationListener.php");
 require_once("listeners/RequestListener.php");
 require_once("listeners/ResponseListener.php");
-require_once("implemented/ViewWrapper.php");
-require_once("implemented/PageValidator.php");
 
 /**
  * Implements front controller MVC functionality. This is ServletsAPI focal point, integrating all components as a whole.
  */
 final class FrontController {	
 	/**
-	 * Performs all steps described in class documentation
+	 * Performs all steps required to convert request to response in procedural mode, while delegating to subcomponents, to maximize performance
 	 * 
-	 * @throws ServletException
+	 * @throws ServletException 
+	 * @throws XMLException
+	 * @throws FormatNotFoundException
+	 * @throws PathNotFoundException
+	 * @throws FileUploadException
 	 */
 	public function __construct($documentDescriptor="configuration.xml") {
-		// sets application object
+		// sets application object based on user-defined XML
 		$application = new Application($documentDescriptor);
 		
-		// instances Listener locator
+		// instances library that finds event listeners for each lifecycle event
 		$listenerLocator = new ListenerLocator($application);
 		
-		// operates custom changes on configuration object
+		// runs ApplicationListener instances found by locator in the order they were set in xml
 		$listeners = $listenerLocator->getClassNames("ApplicationListener");
 		foreach($listeners as $className) {
 			$runnable = new $className($application);
 			$runnable->run();
 		}
 		
-		// sets request object
+		// sets request object based on user request information matched with that in XML
 		$request = new Request();
 		$request->setValidator(new PageValidator($request->getURI()->getPage(), $application));
 		
-		// operates custom changes on request object.
+		// runs RequestListener instances found by locator in the order they were set in xml
 		$listeners = $listenerLocator->getClassNames("RequestListener");
 		foreach($listeners as $className) {
 			$runnable = new $className($application, $request);
 			$runnable->run();
 		}
 		
-		// sets response object
+		// sets response object by matching validated user request information to that contained in XML 
 		$response = new Response($request->getValidator()->getContentType());
 		if(!$application->getAutoRouting()) {
 		    $view = $application->routes()->get($request->getValidator()->getPage())->getView();
@@ -69,27 +72,17 @@ final class FrontController {
 		
 		// if response is not disabled, produce a view
 		if(!$response->isDisabled()) {
-			// locates a wrapper for view type and builds response
+			// locates a view resolver for response content type that populates output stream when ran
 			if($response->getOutputStream()->isEmpty()) {
-				// locates and instances wrapper
-				$wrapperLocator = new WrapperLocator($application, $response->headers()->get("Content-Type"));
-				$className  = $wrapperLocator->getClassName();
-				if($className == WrapperLocator::DEFAULT_WRAPPER && $application->getViewsPath()) {
-					$response->setView($application->getViewsPath()."/".$response->getView());
+				$viewResolverLocator = new ViewResolverLocator($application, $response->headers()->get("Content-Type"));
+				$className  = $viewResolverLocator->getClassName();
+				if($className) {
+				    $runnable = new $className($application, $response);
+				    $runnable->run();
 				}
-				$runnable = new $className($response);
-	    		
-				// builds response
-				ob_start();
-				$runnable->run();
-				$contents = ob_get_contents();
-				ob_end_clean();
-			    
-				// writes response to output stream
-				$response->getOutputStream()->write($contents);
 			}
-		
-			// operates custom changes on response object
+			
+			// runs ResponseListener instances found by locator in the order they were set in xml
 			$listeners = $listenerLocator->getClassNames("ResponseListener");
 			foreach($listeners as $className) {
 				$runnable = new $className($application, $request, $response);
@@ -97,7 +90,7 @@ final class FrontController {
 			}
 		}
 							
-		// commits response
+		// commits response to requester
 		$response->commit();		
 	}
 }
