@@ -1,6 +1,0 @@
-<?php
-namespace Lucinda\MVC\STDOUT;
-/**
- * Exception thrown when HTTP method is not allowed by a REST controller.
- */
-class MethodNotAllowedException extends \Exception {}
