@@ -3,11 +3,18 @@
 - Application:setAttribute/getAttribute -> Application:attributes()
 - Application::getRoutes/getRouteInfo/hasRoute -> Application:routes()
 - Application::getFormats/getFormatInfo/hasFormat -> Application:formats()
+- Application:getWrappersPath -> Application:getViewResolversPath
+- Format:getWrapper -> Format:getViewResolver
 - Request:getParameter/getParameters -> Request:parameters()
 - Request:getHeader/getHeaders -> Request:headers()
 - Request:setAttribute/getAttribute -> Request:attributes()
 - RequestURI:getParameter/getParameters -> RequestURI:parameters()
 - Response:setAttribute/getAttribute -> Response:attributes()
+- Response:Wrapper -> Response:ViewResolver
 - ApplicationException -> XMLException
+
+- moved RestController & HtmlResolver to framework
+- framework: removed BypassWrapper
+- framework: renamed application.wrappers >> application.view_resolvers
 
 TODO: create namespaces relative to subfolders
